<resources>
    <!-- main -->
    <string name="positive_message">Si</string>
    <string name="negative_message">No</string>
    <string name="option_1_bottom_menu">Citas</string>
    <string name="option_2_bottom_menu">Prescripciones</string>
    <string name="option_3_bottom_menu">Expedientes</string>

    <string name="app_name">Proyecto Moviles</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="btnText">Calcular</string>
    <string name="response">Resultado de Cálculos</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ya_posees_una_cuenta">¿Ya posees una cuenta?</string>
    <string name="ingresar">Ingresar</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <!-- MY VARIABLES -->
    <string name="hello_blank_fragment">Hola fragmento vacio</string>
    <string name="home_option">Inicio</string>
    <string name="cite_create">Agendar cita</string>
    <string name="input_date">Seleccione una fecha</string>
    <string name="input_start_time">Indique la hora de inicio</string>
    <string name="input_end_time">Indique la hora de finalización</string>
    <string name="label_date">Cita el día:</string>
    <string name="label_start_time">Hora de inicio:</string>
    <string name="label_end_time">Hora de finalización:</string>
    <string name="slc_doctor">Seleccione un doctor:</string>
    <string name="error_input_date">Seleccione una fecha posterior a hoy:</string>
    <string name="error_end_time">Seleccione una hora de finalización posterior a hoy:</string>
    <string name="btn_end_schedule">Finalizar</string>
    <string name="create_schedule_title">Citas</string>
    <string name="create_schedule_subtitle">Agendar nueva cita</string>
    <string name="list_schedule_subtitle">Próximas citas</string>
    <string name="login_name">Inicio de sesión</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="register_question">¿No tienes una cuenta?, Registrate</string>
    <string name="login_view_redirect">Ingresar con una cuenta registrada</string>
    <string name="register_button">Registrar</string>
    <string name="register_indication">Registrar nueva cuenta</string>
    <string name="enter_email">Por favor ingrese su correo electrónico!</string>
    <string name="enter_password">Por favor ingrese su contraseña!</string>
    <string name="register_success">Registrado exitosamente</string>
    <string name="register_fail">No se pudo registrar!, intente mas tarde</string>
    <string name="logout">Cerrar sesión</string>
    <string name="complete_form">Complete el formulario!</string>
    <string name="schedule_done">Nueva cita agendada!</string>
    <string name="email_warning">Por favor ingrese un correo electronico</string>
    <string name="password_warning">Por favor ingrese una contraseña </string>
    <string name="login_success">Autenticado exitosamente</string>
    <string name="login_failed">Acceso fallido! Intentelo mas tarde</string>
    <string name="google_login_failed">Google login fallido! Intentelo mas tarde</string>
    <string name="preps_file">com.keepeer.firebase.PREFERENCE_FILE_KEY</string>

    <!-- Schedules -->
    <string name="success_create_schedule">Se ha agendado la cita con éxito!</string>
    <string name="failed_create_schedule">No se ha podido agendar la cita</string>
    <string name="delete_schedule">¿Está seguro de cancelar su cita?</string>
    <string name="success_delete_schedule">¿Está seguro de cancelar su cita?</string>

    <!-- Prescriptions -->
    <string name="title_prescriptions">Prescripciones</string>
    <string name="from">Desde</string>
    <string name="to">Hasta</string>
    <string name="subtitle_prescriptions">Todas mis prescripciones</string>
    <string name="param_prescription">Días restantes:</string>
    <string name="active_prescription">Empezar hoy</string>
    <string name="not_started_prescription">No ha iniciado el tratamiento aún!</string>
    <string name="success_started_prescription">Se ha iniciado el tratamiento correctamente</string>

    <!-- Medical Records -->
    <string name="title_medical" translatable="false">Expedientes Medicos</string>
    <string name="subtitle_medical" translatable="false">Todos los expedientes</string>


    <string name="facebook_app_id">560551386216319</string>
    <string name="fb_login_protocol_scheme">fb560551386216319</string>
    <string name="facebook_client_token">3959de2bc8c65738cd5c505c426f0eed</string>

    <!-- Users -->
    <string name="user_title">Crear Usuario</string>
    <string name="user_description">Rellena la información para poder acceder al resto de la aplicación</string>
    <string name="lbl_name">Nombre:</string>
    <string name="lbl_lastname">Apellido:</string>
    <string name="lbl_dui">DUI:</string>
    <string name="lbl_phone">Teléfono:</string>
    <string name="lbl_address">Dirección:</string>
    <string name="lbl_birthdate">Fecha de nacimiento:</string>
    <string name="hint_name">Ingrese su nombre</string>
    <string name="hint_lastname">Ingrese su apellido</string>
    <string name="hint_dui">Ingrese su DUI</string>
    <string name="hint_phone">Ingrese su teléfono</string>
    <string name="hint_address">Ingrese su dirección</string>
    <string name="hint_birthdate">Ingrese su fecha de nacimiento</string>
    <string name="user_action">Registrar</string>
    <string name="error_input_birthdate">Seleccione una fecha anterior a hoy</string>
    <string name="error_input_dui">El dui debe tener el formato ########-#</string>
    <string name="error_input_phone">El teléfono debe tener el formato ########</string>
    <string name="error_input_required">El campo es requerido y debe tener al menos 3 caracteres</string>
    <string name="error_input_birthdate_required">Debe seleccionar una fecha</string>
    <string name="success_create_user">Usuario creado con éxito!</string>
    <string name="failed_create_user">No se ha podido crear el usuario</string>
</resources>