<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".users.CreateUser">


    <FrameLayout
        android:id="@+id/frameTopMenu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp"
        android:paddingTop="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameTopMenu">

        <LinearLayout
            android:id="@+id/firstRow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_title"
                android:textColor="@color/black_soft"
                android:textSize="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/user_description"
                android:textColor="@color/grey"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondRowItem1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/secondRowItem2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/middle_child"
            app:layout_constraintTop_toBottomOf="@id/firstRow">

            <TextView
                android:id="@+id/lblName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_name"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:hint="@string/hint_name" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondRowItem2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/secondRowItem1"
            app:layout_constraintLeft_toRightOf="@id/middle_child"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/lblLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_lastname"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/txtLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:hint="@string/hint_lastname" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdRowItem1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/thirdRowItem2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/middle_child"
            app:layout_constraintTop_toBottomOf="@id/secondRowItem1">

            <TextView
                android:id="@+id/lblDUI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_dui"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/txtDUI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:hint="@string/hint_dui" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdRowItem2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/thirdRowItem1"
            app:layout_constraintLeft_toRightOf="@id/middle_child"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/lblPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_phone"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:hint="@string/hint_phone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourthRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thirdRowItem1">

            <TextView
                android:id="@+id/lblBirthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_birthdate"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/txtBirthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:hint="@string/hint_birthdate" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fourthRow">

            <TextView
                android:id="@+id/lblAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_address"
                android:textSize="13dp" />

            <EditText
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:hint="@string/hint_address" />

            <Button
                android:id="@+id/btnCreateUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/pink_soft"
                android:foregroundTint="@color/white"
                android:text="@string/user_action"
                android:textColor="@color/white"
                app:backgroundTint="@color/pink_soft" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5"
        />


</androidx.constraintlayout.widget.ConstraintLayout>