<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".schedules.CitesList">
    <FrameLayout
        android:id="@+id/frameTopMenu"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@id/frameTopMenu"
        app:layout_constraintBottom_toTopOf="@id/frameBottomMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp"
        android:paddingTop="150dp"
        >
        <LinearLayout
            android:id="@+id/firstRow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_prescriptions"
                android:textSize="25dp"
                android:textColor="@color/black_soft"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_prescriptions"
                android:textSize="15dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/grey"
                />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/prescriptionList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/firstRow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/cite_create"
        android:foregroundTint="@color/pink_soft"
        android:src="@drawable/baseline_add_circle_24"
        app:borderWidth="0dp"
        app:elevation="1dp"
        app:layout_constraintBottom_toTopOf="@+id/frameBottomMenu"
        app:layout_constraintLeft_toLeftOf="@id/middle"
        app:layout_constraintRight_toRightOf="@id/middle"
        app:layout_constraintTop_toTopOf="@+id/frameBottomMenu"
        app:maxImageSize="52dp"
        app:rippleColor="@color/pink_soft"
        app:tint="@null" />

    <FrameLayout
        android:id="@+id/frameBottomMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>
